Adding basic math transform keys in resources.
git-svn-id: http://svn.code.sf.net/p/genoviz/code/trunk@15057 80d5a9c2-7d8c-4c9f-9369-4e03bca4d2bd

--- a/core/genometryImpl/resources/genometry.properties
+++ b/core/genometryImpl/resources/genometry.properties
@@ -30,6 +30,10 @@ operator_alignment_not=Not
 operator_annotation_not=Not
 operator_probeset_not=Not
 operator_diff=Diff
+operator_add=Add
+operator_divide=Divide
+operator_multiply=Multiply
+operator_subtract=Subtract
 operator_alignment_a_not_b=A not B:
 operator_annotation_a_not_b=A not B:
 operator_probeset_a_not_b=A not B:
