Get action text from bundle.
git-svn-id: http://svn.code.sf.net/p/genoviz/code/trunk@15110 80d5a9c2-7d8c-4c9f-9369-4e03bca4d2bd

--- a/core/igb/resources/igb.properties
+++ b/core/igb/resources/igb.properties
@@ -175,6 +175,8 @@ changeExpandMaxAction=Change Stack Height for Selected Annotation Tracks
 changeExpandMaxActionToolTip=Change stack height for selected annotation tracks
 changeExpandMaxAllAction=Adjust Max Stack Height All...
 changeExpandMaxOptimizeAction=Optimize Stack Height for Selected Annotation Tracks
+useResidueMask=Show Mismatch Only
+shadeBasedOnQualityScore=Shade bases using quality score
 #Optimize button in annotation tab has this tooptip in hard code.
 changeExpandMaxOptimizeActionTooltip=Optimize stack height for selected annotation tracks so that all annotations are shown
 changeTierHeightAction=Change Height
