Rearranging search columns.
git-svn-id: http://svn.code.sf.net/p/genoviz/code/trunk@15118 80d5a9c2-7d8c-4c9f-9369-4e03bca4d2bd

--- a/plugins/SearchView/resources/search.properties
+++ b/plugins/SearchView/resources/search.properties
@@ -15,12 +15,12 @@ noResults=0 results
 
 #columns
 searchTableID=ID
-searchTableTier=Tier
 searchTableGeneName=Gene Name
 searchTableDescription=Description
+searchTableTier=Track
 searchTableStart=Start
 searchTableEnd=End
-searchTableChromosome=Chromosome
+searchTableChromosome=Chr
 searchTableStrand=Strand
 searchTablePattern=Pattern
 searchTableColor=Color
