Updating library name.
git-svn-id: http://svn.code.sf.net/p/genoviz/code/trunk@15160 80d5a9c2-7d8c-4c9f-9369-4e03bca4d2bd

--- a/tools/LuceneIndexing/build.xml
+++ b/tools/LuceneIndexing/build.xml
@@ -40,7 +40,7 @@
 		<copy file="${bundle.dir}/log4j-1.2.11.bnd.jar" todir="temp/bundle" />
 		<copy file="${bundle.dir}/picard.bnd.jar" todir="temp/bundle" />
 		<copy file="${bundle.dir}/sam--igbext.bnd.jar" todir="temp/bundle" />
-		<copy file="${bundle.dir}/tribble.bnd.jar" todir="temp/bundle" />
+		<copy file="${bundle.dir}/tribble--igbext.bnd.jar" todir="temp/bundle" />
 		<copy file="${bundle.dir}/common.jar" todir="temp/bundle" />
 		<copy file="${bundle.dir}/genometry.jar" todir="temp/bundle" />
 		<copy file="${bundle.dir}/genoviz.jar" todir="temp/bundle" />
