Alpha version of BAMIndexer added -KTS
git-svn-id: http://svn.code.sf.net/p/genoviz/code/trunk@15168 80d5a9c2-7d8c-4c9f-9369-4e03bca4d2bd

--- a/build.properties
+++ b/build.properties
@@ -8,7 +8,7 @@ ext.bundle.dir=${basedir}/plugins/ext
 # list the optional bundles in IGB to include
 include.bundles=plugins_page,Thresholding,RestrictionSites,ExternalView,PropertyView,SearchView,AnnotationTab,GraphTab,Bookmark,SearchModeIdOrProps,SearchModeLucene,KeyWordSearch,BigBedHandler,BigWigHandler,IGBScript,Tutorial,Survey
 # list the bundles that are not included in IGB
-not.include.bundles=DASRegistryServerType,TableView,FindAnnotations,GeometricMean,OverlapAnnotationOperator,MergeAnnotationOperator,PythonScript,RubyScript,SampleSelection,SearchModeSymmetryFilter,TallyHandler,ThousandGenomesServerType,TranscriptIsoform,TutorialHelper,ParentOperators
+not.include.bundles=BAMIndexer
 # the default preferences file location
 def.prefs.dir=${basedir}/core/igb/resources
 # the OSGi implementation
