--- a/plugins/BAMIndexer/ant.properties
+++ b/plugins/BAMIndexer/ant.properties
@@ -1,4 +1,4 @@
-name=Bookmark
-project=Bookmark
-classpath=${common}/build:${igb_service}/build:${window_service}/build:${igb}/build:${genometry}/build:${lib.dir}/swing-layout.jar:${lib.dir}/jide.jar:${genoviz}/build:${osgi.impl}
+name=BAMIndexer
+project=BAMIndexer
+classpath=${common}/build:${igb_service}/build:${window_service}/build:${igb}/build:${genometry}/build:${lib.dir}/swing-layout.jar:${lib.dir}/jide.jar:${genoviz}/build:${osgi.impl}/:${lib.dir}/sam.jar:${lib.dir}/picard.jar
 plugin-jar=true
