--- a/core/genometryImpl/resources/genometry.properties
+++ b/core/genometryImpl/resources/genometry.properties
@@ -59,6 +59,14 @@ operator_probeset_xor=Xor
 operator_findjunctions=Find Junctions
 operator_findjunctions_tophat=Find Junctions (TopHat)
 
+#filters
+filter_mapping_quality_score=Mapping Quality Score
+filter_mismatch=Mismatch
+filter_no_intron=No Intron
+filter_single_mapper=Single Mapper
+filter_multi_mapper=Multi Mapper
+filter_quality_score=Average Quality Score
+
 #messages
 howtoloadmessage=To display your data, zoom in and click Load Data
 show_how_to_load=Show how to load
