--- a/build.properties
+++ b/build.properties
@@ -8,7 +8,7 @@ ext.bundle.dir=${basedir}/plugins/ext
 # list the optional bundles in IGB to include
 include.bundles=plugins_page,Thresholding,RestrictionSites,ExternalView,PropertyView,SearchView,AnnotationTab,GraphTab,Bookmark,SearchModeIdOrProps,SearchModeLucene,KeyWordSearch,BigBedHandler,BigWigHandler,IGBScript,Tutorial,Survey,BAMIndexer
 # list the bundles that are not included in IGB
-not.include.bundles=DASRegistryServerType,TableView,FindAnnotations,GeometricMean,OverlapAnnotationOperator,MergeAnnotationOperator,PythonScript,RubyScript,SampleSelection,SearchModeSymmetryFilter,TallyHandler,ThousandGenomesServerType,TranscriptIsoform,TutorialHelper,ParentOperators
+not.include.bundles=DASRegistryServerType,TableView,FindAnnotations,GeometricMean,OverlapAnnotationOperator,MergeAnnotationOperator,PythonScript,RubyScript,SampleSelection,SearchModeSymmetryFilter,TallyHandler,ThousandGenomesServerType,TranscriptIsoform,TutorialHelper,ParentOperators,NCBIBlast
 # the default preferences file location
 def.prefs.dir=${basedir}/core/igb/resources
 # the OSGi implementation
