Enable NCBI plugin.
git-svn-id: http://svn.code.sf.net/p/genoviz/code/trunk@15214 80d5a9c2-7d8c-4c9f-9369-4e03bca4d2bd

--- a/build.xml
+++ b/build.xml
@@ -45,6 +45,7 @@
 		<property name="Tutorial"            value="${basedir}/plugins/Tutorial" />
 		<property name="IGBScript"           value="${basedir}/plugins/IGBScript" />
 		<property name="BAMIndexer"			 value="${basedir}/plugins/BAMIndexer"/>
+		<property name="NCBIBlast"			 value="${basedir}/plugins/NCBIBlast" />
 		<property name="plugins_page"        value="${basedir}/plugins/plugins_page" />
 
 		<!-- directory paths -->
