--- a/build.properties
+++ b/build.properties
@@ -6,9 +6,9 @@ igb.jar.name=igb_exe
 # point to a directory that has the custom bundles to include
 ext.bundle.dir=${basedir}/plugins/ext
 # list the optional bundles in IGB to include
-include.bundles=plugins_page,Thresholding,RestrictionSites,ExternalView,PropertyView,SearchView,AnnotationTab,GraphTab,Bookmark,SearchModeIdOrProps,SearchModeLucene,KeyWordSearch,BigBedHandler,BigWigHandler,IGBScript,Tutorial,Survey,BAMIndexer
+include.bundles=plugins_page,Thresholding,RestrictionSites,ExternalView,PropertyView,SearchView,AnnotationTab,GraphTab,Bookmark,SearchModeIdOrProps,SearchModeLucene,KeyWordSearch,BigBedHandler,BigWigHandler,IGBScript,Tutorial,Survey,BAMIndexer,NCBIBlast
 # list the bundles that are not included in IGB
-not.include.bundles=DASRegistryServerType,TableView,FindAnnotations,GeometricMean,OverlapAnnotationOperator,MergeAnnotationOperator,PythonScript,RubyScript,SampleSelection,SearchModeSymmetryFilter,TallyHandler,ThousandGenomesServerType,TranscriptIsoform,TutorialHelper,ParentOperators,NCBIBlast
+not.include.bundles=DASRegistryServerType,TableView,FindAnnotations,GeometricMean,OverlapAnnotationOperator,MergeAnnotationOperator,PythonScript,RubyScript,SampleSelection,SearchModeSymmetryFilter,TallyHandler,ThousandGenomesServerType,TranscriptIsoform,TutorialHelper,ParentOperators
 # the default preferences file location
 def.prefs.dir=${basedir}/core/igb/resources
 # the OSGi implementation
