Adding score filter.
git-svn-id: http://svn.code.sf.net/p/genoviz/code/trunk@15221 80d5a9c2-7d8c-4c9f-9369-4e03bca4d2bd

--- a/core/genometryImpl/resources/genometry.properties
+++ b/core/genometryImpl/resources/genometry.properties
@@ -66,6 +66,7 @@ filter_no_intron=No Intron
 filter_single_mapper=Single Mapper
 filter_multi_mapper=Multi Mapper
 filter_quality_score=Average Quality Score
+filter_score=Score
 
 #messages
 howtoloadmessage=To display your data, zoom in and click Load Data
