Adding new filter.
git-svn-id: http://svn.code.sf.net/p/genoviz/code/trunk@15282 80d5a9c2-7d8c-4c9f-9369-4e03bca4d2bd

--- a/core/genometryImpl/resources/genometry.properties
+++ b/core/genometryImpl/resources/genometry.properties
@@ -62,7 +62,8 @@ operator_findjunctions_tophat=Find Junctions (TopHat)
 #filters
 filter_mapping_quality_score=Mapping Quality Score
 filter_mismatch=Mismatch
-filter_no_intron=No Intron
+filter_intron=Reads with gaps
+filter_no_intron=Reads with no gaps
 filter_single_mapper=Single Mapper
 filter_multi_mapper=Multi Mapper
 filter_quality_score=Average Quality Score
