Show uniform message for search result.
git-svn-id: http://svn.code.sf.net/p/genoviz/code/trunk@15284 80d5a9c2-7d8c-4c9f-9369-4e03bca4d2bd

--- a/plugins/SearchModeIdOrProps/resources/searchmodeidorprops.properties
+++ b/plugins/SearchModeIdOrProps/resources/searchmodeidorprops.properties
@@ -3,7 +3,7 @@ searchErrorRegex=Problem with regular expression...
 searchErrorShort={0}: Text is too short to allow remote search.
 searchErrorSyntax=Regular expression syntax error...\n{0}
 searchLocalResults={0}: {1} local matches
-searchNoResults={0}: No matches
+searchNoResults=Found 0 matches
 searchRegexIDOrName=IDs or names
 searchRegexIDOrNameTF=IDs or names match string or Regular Expression
 searchRegexProps=Properties
@@ -16,3 +16,6 @@ optionCheckBoxTT=also search remotely ({0} {1}) for IDs
 remoteServerSearchSingular=server
 remoteServerSearchPlural=servers
 friendlyPattern=Search for {0} on {1}
+searchSummary=Found {0} matches {1}
+forLocalSearch=for local search
+forRemoteSearch=for remote search
