--- a/plugins/SearchModeLucene/resources/searchmodelucene.properties
+++ b/plugins/SearchModeLucene/resources/searchmodelucene.properties
@@ -2,5 +2,5 @@ searchTableProps=Properties
 searchLucene=Lucene
 searchLuceneTooltip=Search using lucene indexing
 searchSearching=Searching {0} for {1} ...
-searchNoResults={0}: No matches
-searchResults={0}: {1} matches
+searchNoResults=Found 0 matches
+searchSummary=Found {0} matches for lucene search
