--- a/plugins/SearchView/resources/search.properties
+++ b/plugins/SearchView/resources/search.properties
@@ -2,6 +2,7 @@
 searchChooseSearch=Choose search method
 searchSequenceToSearch=Sequence to search
 pleaseSelectGenome=Please select genome before continuing
+doubleClickToView=Double-click rows to view matches
 
 #Tab names
 searchTab=Advanced Search
