--- a/plugins/SearchView/resources/searchmoderesidue.properties
+++ b/plugins/SearchView/resources/searchmoderesidue.properties
@@ -7,8 +7,8 @@ searchErrorRegex=Problem with regular expression...
 searchSelectSeq=Searching {0} will change the main view to show {1}.\nProceed?
 searchConfirmLoad=Residues for {0} not loaded.  \nDo you want to load residues?
 searchWorking={0}: Working...
-searchFound=Found : {0} forward and {1} reverse strand hits. Click row to view hit.
-searchCancelled=search cancelled
+searchSummary=Found {0} forward and {1} reverse strand hits.
+searchCancelled=Search Canceled
 friendlyPattern=Searching for {0} on {1}
 optionCheckBox=Overlay results
 optionCheckBoxTT=Do not clear results instead overlay on current results.
