The changes are made for the IGBD-307 so as to include a new view menu item which will draw and undraw the filter icon. This feature is also added to clear and show visual tools
git-svn-id: http://svn.code.sf.net/p/genoviz/code/trunk@15298 80d5a9c2-7d8c-4c9f-9369-4e03bca4d2bd

--- a/core/igb/resources/igb.properties
+++ b/core/igb/resources/igb.properties
@@ -105,6 +105,7 @@ toggleHairline=Show Zoom Stripe
 toggleHairlineLabel=Show Zoom Stripe Label
 toggleEdgeMatching=Show Edge Matching
 showIGBTrackMark=Show IGB Track Mark
+showFilterMark=Show Filter Mark
 showFullFilePathInTrack=Show Full File Path In Track
 startAutoScroll=Start Auto Scroll
 stopAutoScroll=Stop Auto Scroll
