Adding match filter.
git-svn-id: http://svn.code.sf.net/p/genoviz/code/trunk@15327 80d5a9c2-7d8c-4c9f-9369-4e03bca4d2bd

--- a/core/genometryImpl/resources/genometry.properties
+++ b/core/genometryImpl/resources/genometry.properties
@@ -58,10 +58,12 @@ operator_annotation_xor=Xor
 operator_probeset_xor=Xor
 operator_findjunctions=Find Junctions
 operator_findjunctions_tophat=Find Junctions (TopHat)
+operator_findmate=Paried End
 
 #filters
 filter_mapping_quality_score=Mapping Quality Score
 filter_mismatch=Mismatch
+filter_match=Perfect Match
 filter_intron=Reads with gaps
 filter_no_intron=Reads with no gaps
 filter_single_mapper=Single Mapper
