Modified the text as "Enter search term or region " as discussed for the issue IGBD-162
git-svn-id: http://svn.code.sf.net/p/genoviz/code/trunk@15357 80d5a9c2-7d8c-4c9f-9369-4e03bca4d2bd

--- a/core/igb/resources/igb.properties
+++ b/core/igb/resources/igb.properties
@@ -276,7 +276,7 @@ scrollModeToolTip=Move
 autoloadToolTip=AutoLoad Threshold
 centerZoomStripe=Center at zoom stripe
 goToRegion=Go To Region
-goToRegionToolTip=<html>Enter a coordinate range, gene name or attribute here.<br>Coordinates - use the format 'start : end' or 'start + width' or 'center',<br>or use the UCSC browser format 'chrom:start-end'.<html>
+goToRegionToolTip=Enter search term or region
 nextSearchSpan=Next Search Span
 
 #OptionPane
