Adding paired filter.
git-svn-id: http://svn.code.sf.net/p/genoviz/code/trunk@15521 80d5a9c2-7d8c-4c9f-9369-4e03bca4d2bd

--- a/core/genometryImpl/resources/genometry.properties
+++ b/core/genometryImpl/resources/genometry.properties
@@ -70,6 +70,7 @@ filter_single_mapper=Single Mapper
 filter_multi_mapper=Multi Mapper
 filter_quality_score=Average Quality Score
 filter_score=Score
+filter_paired=Paired
 
 #messages
 howtoloadmessage=To display your data, zoom in and click Load Data
