--- a/core/genometryImpl/resources/genometry.properties
+++ b/core/genometryImpl/resources/genometry.properties
@@ -71,6 +71,7 @@ filter_multi_mapper=Multi Mapper
 filter_quality_score=Average Quality Score
 filter_score=Score
 filter_paired=Paired
+filter_paired_run_no=Paired By Run No
 
 #messages
 howtoloadmessage=To display your data, zoom in and click Load Data
