Using name from resources.
git-svn-id: http://svn.code.sf.net/p/genoviz/code/trunk@15537 80d5a9c2-7d8c-4c9f-9369-4e03bca4d2bd

--- a/core/genometryImpl/resources/genometry.properties
+++ b/core/genometryImpl/resources/genometry.properties
@@ -73,6 +73,12 @@ filter_score=Score
 filter_paired=Paired
 filter_paired_run_no=Paired By Run No
 
+#color_by
+color_by_paired=Paired
+color_by_paired_by_run_no=Paired By Run No
+color_by_rgb=RGB
+color_by_strand=Strand
+
 #messages
 howtoloadmessage=To display your data, zoom in and click Load Data
 show_how_to_load=Show how to load
