--- a/core/igb/resources/igb.properties
+++ b/core/igb/resources/igb.properties
@@ -365,3 +365,9 @@ operatorMultipleTrackApplyToolTip=Functions require two or more tracks
 #Shortcuts Tab
 optimizeAll =Optimize Stack Height for All Annotation Tracks
 optimizeAllToolTip =Optimize stack height for all annotation tracks so that all annotations are shown
+
+#color_by
+color_by_length=Length
+color_by_mapqscore=Mapq Score
+color_by_property=Property
+color_by_score=Score
