--- a/core/genometryImpl/resources/genometry.properties
+++ b/core/genometryImpl/resources/genometry.properties
@@ -74,6 +74,7 @@ filter_paired=Paired
 filter_paired_run_no=Paired By Run No
 
 #color_by
+color_by_duplicate=PCR or Optical duplicate
 color_by_paired=Paired
 color_by_paired_by_run_no=Paired By Run No
 color_by_rgb=RGB
