Adding duplicate color by.
git-svn-id: http://svn.code.sf.net/p/genoviz/code/trunk@15540 80d5a9c2-7d8c-4c9f-9369-4e03bca4d2bd

--- a/core/genometryImpl/resources/genometry.properties
+++ b/core/genometryImpl/resources/genometry.properties
@@ -78,9 +78,9 @@ filter_paired_run_no=Run Number
 filter_duplicate=Technical duplicate
 
 #color_by
-color_by_duplicate=Technical duplicate
-color_by_paired=Paired End Mates
-color_by_paired_by_run_no=Run Number
+color_by_duplicate=PCR or Optical duplicate
+color_by_paired=Paired
+color_by_paired_by_run_no=Paired By Run No
 color_by_rgb=RGB
 color_by_strand=Strand
 
