Adding duplicate filter by.
git-svn-id: http://svn.code.sf.net/p/genoviz/code/trunk@15542 80d5a9c2-7d8c-4c9f-9369-4e03bca4d2bd

--- a/core/genometryImpl/resources/genometry.properties
+++ b/core/genometryImpl/resources/genometry.properties
@@ -72,6 +72,7 @@ filter_quality_score=Average Quality Score
 filter_score=Score
 filter_paired=Paired
 filter_paired_run_no=Paired By Run No
+filter_duplicate=PCR or Optical duplicate
 
 #color_by
 color_by_duplicate=PCR or Optical duplicate
