--- a/core/igb/resources/igb.properties
+++ b/core/igb/resources/igb.properties
@@ -15,6 +15,8 @@ tabsMenuMnemonic=B
 helpMenu=Help
 helpMenuMnemonic=H
 login=Login
+tryagain=Try Again
+errorLogin=The username or password you entered is incorrect.
 # 0 - menu item
 menuItemHasDialog={0}\u2026
 password=Password
