--- a/core/genometryImpl/resources/genometry.properties
+++ b/core/genometryImpl/resources/genometry.properties
@@ -73,14 +73,14 @@ filter_single_mapper=Single Mapper
 filter_multi_mapper=Multi Mapper
 filter_quality_score=Average Quality Score
 filter_score=Score
-filter_paired=Paired
-filter_paired_run_no=Paired By Run No
-filter_duplicate=PCR or Optical duplicate
+filter_paired=Paired End Mates
+filter_paired_run_no=Run Number
+filter_duplicate=Technical duplicate
 
 #color_by
-color_by_duplicate=PCR or Optical duplicate
-color_by_paired=Paired
-color_by_paired_by_run_no=Paired By Run No
+color_by_duplicate=Technical duplicate
+color_by_paired=Paired End Mates
+color_by_paired_by_run_no=Run Number
 color_by_rgb=RGB
 color_by_strand=Strand
 
