--- a/core/igb/resources/igb.properties
+++ b/core/igb/resources/igb.properties
@@ -31,7 +31,7 @@ userAgent={0}/{1}; {2}/{3} ({4}); {5};
 username=Username
 viewMenu=View
 viewMenuMnemonic=V
-
+displayPassword=Display Password
 #Tab names
 dataAccessTab=Data Access
 slicedViewTab=Sliced View
@@ -103,7 +103,7 @@ setThreshold=Set AutoLoad Threshold to Current View
 unclamp=Unclamp
 reverseComplement=Reverse Complement
 toggleShrinkWrapping=Shrink Wrap Sequence
-toggleHairline=Show Zoom Stripe
+toggleHairline=username Zoom Stripe
 toggleHairlineLabel=Show Zoom Stripe Label
 toggleEdgeMatching=Show Edge Matching
 showIGBTrackMark=Show IGB Track Mark
