--- a/plugins/Survey/resources/survey.properties
+++ b/plugins/Survey/resources/survey.properties
@@ -1,3 +1,3 @@
 surveyMenu=Survey
 surveyMenuMnemonic=E
-surveys=http://bioviz.org/igb/releases/current/surveys.xml
+surveys=http://test.bioviz.org/igb/releases/current/surveys.xml
