Set application name.
git-svn-id: http://svn.code.sf.net/p/genoviz/code/trunk@15620 80d5a9c2-7d8c-4c9f-9369-4e03bca4d2bd

--- a/build.xml
+++ b/build.xml
@@ -416,6 +416,7 @@
 		<jar jarfile="${igb.jar.name}.jar" update="false" index="true">
 			<manifest>
 				<attribute name="Main-Class" value="com.affymetrix.main.Main"/>
+				<arritbute name="Application-Name" value="IGB" />
 				<attribute name="Permissions" value="all-permissions"/>
 <!--				<attribute name="SplashScreen-Image" value="com/affymetrix/igb/igb_splash.gif"/>-->
 			</manifest>
