--- a/build.xml
+++ b/build.xml
@@ -187,12 +187,27 @@
 <!--		<copy file="${jnlp.splashicon.path}" tofile="${webstart.dir}/${jnlp.splashicon.name}" />-->
 
 		<mkdir dir="${dist.dir}/JNLP-INF" />
-		<copy file="${webstart.dir}/igb.jnlp" tofile="${dist.dir}/JNLP-INF/APPLICATION.JNLP" />
-		<jar destfile="${igb.jar.name}.jar" update="true">
+		<copy file="${webstart.dir}/igb-5GB.jnlp" tofile="${dist.dir}/JNLP-INF/APPLICATION.JNLP" overwrite="true"/>
+		<jar destfile="${igb.jar.name}-5GB.jar" update="true">
 			<fileset dir="${dist.dir}" includes="JNLP-INF/*"/>
+			<zipgroupfileset file="${igb.jar.name}.jar" />
 		</jar>
 
+		<copy file="${webstart.dir}/igb-large.jnlp" tofile="${dist.dir}/JNLP-INF/APPLICATION.JNLP" overwrite="true"/>
+		<jar destfile="${igb.jar.name}-large.jar" update="true">
+			<fileset dir="${dist.dir}" includes="JNLP-INF/*"/>
+			<zipgroupfileset file="${igb.jar.name}.jar" />
+		</jar>
+
+		<copy file="${webstart.dir}/igb.jnlp" tofile="${dist.dir}/JNLP-INF/APPLICATION.JNLP" overwrite="true"/>
+		<jar destfile="${igb.jar.name}.jar" update="true">
+			<fileset dir="${dist.dir}" includes="JNLP-INF/*"/>
+		</jar>		
+		<delete dir="${dist.dir}/JNLP-INF" />
+
 		<my.signjar jar="${basedir}/${igb.jar.name}.jar" signedjar="${webstart.dir}/${igb.jar.name}.jar" />
+		<my.signjar jar="${basedir}/${igb.jar.name}-large.jar" signedjar="${webstart.dir}/${igb.jar.name}-large.jar" />
+		<my.signjar jar="${basedir}/${igb.jar.name}-5GB.jar" signedjar="${webstart.dir}/${igb.jar.name}-5GB.jar" />
 		<my.signjar jar="${dist.dir}/igb-i18n.jar" signedjar="${webstart.dir}/igb-i18n.jar" />
 	</target>
 
