Set filesetmanifest attribute.
git-svn-id: http://svn.code.sf.net/p/genoviz/code/trunk@15627 80d5a9c2-7d8c-4c9f-9369-4e03bca4d2bd

--- a/build.xml
+++ b/build.xml
@@ -188,13 +188,13 @@
 
 		<mkdir dir="${dist.dir}/JNLP-INF" />
 		<copy file="${webstart.dir}/igb-5GB.jnlp" tofile="${dist.dir}/JNLP-INF/APPLICATION.JNLP" overwrite="true"/>
-		<jar destfile="${igb.jar.name}-5GB.jar" update="true">
+		<jar destfile="${igb.jar.name}-5GB.jar" update="false" filesetmanifest="merge" >
 			<fileset dir="${dist.dir}" includes="JNLP-INF/*"/>
 			<zipgroupfileset file="${igb.jar.name}.jar" />
 		</jar>
 
 		<copy file="${webstart.dir}/igb-large.jnlp" tofile="${dist.dir}/JNLP-INF/APPLICATION.JNLP" overwrite="true"/>
-		<jar destfile="${igb.jar.name}-large.jar" update="true">
+		<jar destfile="${igb.jar.name}-large.jar" update="false" filesetmanifest="merge" >
 			<fileset dir="${dist.dir}" includes="JNLP-INF/*"/>
 			<zipgroupfileset file="${igb.jar.name}.jar" />
 		</jar>
