--- a/build.xml
+++ b/build.xml
@@ -208,7 +208,7 @@
 		<my.signjar jar="${basedir}/${igb.jar.name}.jar" signedjar="${webstart.dir}/${igb.jar.name}.jar" />
 		<my.signjar jar="${basedir}/${igb.jar.name}-large.jar" signedjar="${webstart.dir}/${igb.jar.name}-large.jar" />
 		<my.signjar jar="${basedir}/${igb.jar.name}-5GB.jar" signedjar="${webstart.dir}/${igb.jar.name}-5GB.jar" />
-		<my.signjar jar="${dist.dir}/igb-i18n.jar" signedjar="${webstart.dir}/igb-i18n.jar" />
+		<!--my.signjar jar="${dist.dir}/igb-i18n.jar" signedjar="${webstart.dir}/igb-i18n.jar" / -->
 	</target>
 
 	<target name="webapp" depends="jar,flex" description="Create das2servlet web application">
