--- a/build.xml
+++ b/build.xml
@@ -189,18 +189,27 @@
 		<mkdir dir="${dist.dir}/JNLP-INF" />
 		<copy file="${webstart.dir}/igb-5GB.jnlp" tofile="${dist.dir}/JNLP-INF/APPLICATION.JNLP" overwrite="true"/>
 		<jar destfile="${igb.jar.5GB.name}.jar" update="false" filesetmanifest="merge" >
+			<manifest>
+				<attribute name="Codebase" value="${jnlp.codebase}"/>
+			</manifest>
 			<fileset dir="${dist.dir}" includes="JNLP-INF/*"/>
 			<zipgroupfileset file="${igb.jar.name}.jar" />
 		</jar>
 
 		<copy file="${webstart.dir}/igb-large.jnlp" tofile="${dist.dir}/JNLP-INF/APPLICATION.JNLP" overwrite="true"/>
 		<jar destfile="${igb.jar.large.name}.jar" update="false" filesetmanifest="merge" >
+			<manifest>
+				<attribute name="Codebase" value="${jnlp.codebase}"/>
+			</manifest>
 			<fileset dir="${dist.dir}" includes="JNLP-INF/*"/>
 			<zipgroupfileset file="${igb.jar.name}.jar" />
 		</jar>
 
 		<copy file="${webstart.dir}/igb.jnlp" tofile="${dist.dir}/JNLP-INF/APPLICATION.JNLP" overwrite="true"/>
 		<jar destfile="${igb.jar.name}.jar" update="true">
+			<manifest>
+				<attribute name="Codebase" value="${jnlp.codebase}"/>
+			</manifest>
 			<fileset dir="${dist.dir}" includes="JNLP-INF/*"/>
 		</jar>		
 		<delete dir="${dist.dir}/JNLP-INF" />
