--- a/build.xml
+++ b/build.xml
@@ -215,8 +215,8 @@
 		<delete dir="${dist.dir}/JNLP-INF" />
 
 		<my.signjar jar="${basedir}/${igb.jar.name}.jar" signedjar="${webstart.dir}/${igb.jar.name}.jar" />
-		<my.signjar jar="${basedir}/${igb.jar.name}-large.jar" signedjar="${webstart.dir}/${igb.jar.name}-large.jar" />
-		<my.signjar jar="${basedir}/${igb.jar.name}-5GB.jar" signedjar="${webstart.dir}/${igb.jar.name}-5GB.jar" />
+		<my.signjar jar="${basedir}/${igb.jar.large.name}.jar" signedjar="${webstart.dir}/${igb.jar.large.name}.jar" />
+		<my.signjar jar="${basedir}/${igb.jar.5GB.name}.jar" signedjar="${webstart.dir}/${igb.jar.5GB.name}.jar" />
 		<!--my.signjar jar="${dist.dir}/igb-i18n.jar" signedjar="${webstart.dir}/igb-i18n.jar" / -->
 	</target>
 
