Moving property to init in build.xml
git-svn-id: http://svn.code.sf.net/p/genoviz/code/trunk@15660 80d5a9c2-7d8c-4c9f-9369-4e03bca4d2bd

--- a/build.xml
+++ b/build.xml
@@ -50,6 +50,10 @@
 		<property name="ApolloLibrary"		 value="${basedir}/plugins/ApolloLibrary" />
 
 		<!-- directory paths -->
+		<property name="dist.dir"			 value="${basedir}/dist" />
+		<property name="webstart.dir"		 value="${dist.dir}/webstart" />
+		<property name="webapp.dir"			 value="${dist.dir}/webapp" />
+		<property name="release.dir"		 value="${dist.dir}/release" />
 		<property name="lib.dir"			 value="${basedir}/ext" />
 		<property name="etc.dir"			 value="${basedir}/etc" />
 		<property name="demos.dir"			 value="${genoviz}/demo" />
