--- a/build.properties
+++ b/build.properties
@@ -3,8 +3,10 @@
 #
 # change the name of the distribution
 igb.jar.name=igb_exe
-igb.jar.large.name=igb_exe-large
-igb.jar.5GB.name=igb_exe-5GB
+#igb.jar.large.name=igb_exe-large
+igb.jar.large.name=igb_exe
+#igb.jar.5GB.name=igb_exe-5GB
+igb.jar.5GB.name=igb_exe
 # point to a directory that has the custom bundles to include
 ext.bundle.dir=${basedir}/plugins/ext
 # list the optional bundles in IGB to include
