Reverting changes of r15673.
git-svn-id: http://svn.code.sf.net/p/genoviz/code/trunk@15674 80d5a9c2-7d8c-4c9f-9369-4e03bca4d2bd

--- a/build.xml
+++ b/build.xml
@@ -190,7 +190,7 @@
 		<copy file="${jnlp.icon.path}" tofile="${webstart.dir}/${jnlp.icon.name}" />
 <!--		<copy file="${jnlp.splashicon.path}" tofile="${webstart.dir}/${jnlp.splashicon.name}" />-->
 
-		<!-- mkdir dir="${dist.dir}/JNLP-INF" />
+		<mkdir dir="${dist.dir}/JNLP-INF" />
 		<copy file="${webstart.dir}/igb-5GB.jnlp" tofile="${dist.dir}/JNLP-INF/APPLICATION.JNLP" overwrite="true"/>
 		<jar destfile="${igb.jar.5GB.name}.jar" update="false" filesetmanifest="merge" >
 			<manifest>
@@ -209,18 +209,18 @@
 			<zipgroupfileset file="${igb.jar.name}.jar" />
 		</jar>
 
-		<copy file="${webstart.dir}/igb.jnlp" tofile="${dist.dir}/JNLP-INF/APPLICATION.JNLP" overwrite="true"/ -->
+		<copy file="${webstart.dir}/igb.jnlp" tofile="${dist.dir}/JNLP-INF/APPLICATION.JNLP" overwrite="true"/>
 		<jar destfile="${igb.jar.name}.jar" update="true">
 			<manifest>
 				<attribute name="Codebase" value="${jnlp.codebase}"/>
 			</manifest>
 			<fileset dir="${dist.dir}" includes="JNLP-INF/*"/>
 		</jar>		
-		<!-- delete dir="${dist.dir}/JNLP-INF" / -->
+		<delete dir="${dist.dir}/JNLP-INF" />
 
 		<my.signjar jar="${basedir}/${igb.jar.name}.jar" signedjar="${webstart.dir}/${igb.jar.name}.jar" />
-		<!-- my.signjar jar="${basedir}/${igb.jar.large.name}.jar" signedjar="${webstart.dir}/${igb.jar.large.name}.jar" />
-		<my.signjar jar="${basedir}/${igb.jar.5GB.name}.jar" signedjar="${webstart.dir}/${igb.jar.5GB.name}.jar" / -->
+		<my.signjar jar="${basedir}/${igb.jar.large.name}.jar" signedjar="${webstart.dir}/${igb.jar.large.name}.jar" />
+		<my.signjar jar="${basedir}/${igb.jar.5GB.name}.jar" signedjar="${webstart.dir}/${igb.jar.5GB.name}.jar" />
 		<!--my.signjar jar="${dist.dir}/igb-i18n.jar" signedjar="${webstart.dir}/igb-i18n.jar" / -->
 	</target>
 
