Add trusted library attribute to external jars.
git-svn-id: http://svn.code.sf.net/p/genoviz/code/trunk@15679 80d5a9c2-7d8c-4c9f-9369-4e03bca4d2bd

--- a/build.xml
+++ b/build.xml
@@ -135,7 +135,14 @@
 			<arg value="wrap"/>
 			<arg value="${jar_name}.jar"/>
 		</java>
-		<move file="${lib.dir}/${jar_name}.bar" tofile="${bundle.dir}/${jar_name}.bnd.jar" filtering="false" />
+		<move file="${lib.dir}/${jar_name}.bar" tofile="${bundle.dir}/${jar_name}.tmp.bnd.jar" filtering="false" />
+		<jar jarfile="${bundle.dir}/${jar_name}.bnd.jar" filesetmanifest="merge">
+            <manifest>
+                <attribute name="Trusted-Library" value="true" />
+            </manifest>
+			<zipgroupfileset file="${bundle.dir}/${jar_name}.tmp.bnd.jar" />
+        </jar>
+		<delete file="${bundle.dir}/${jar_name}.tmp.bnd.jar" />
 	</target>
 
 	<target name="copy-bundle" description="copy bundles to bundle dir">
