Add trusted library attribute main jar.
git-svn-id: http://svn.code.sf.net/p/genoviz/code/trunk@15682 80d5a9c2-7d8c-4c9f-9369-4e03bca4d2bd

--- a/build.xml
+++ b/build.xml
@@ -461,6 +461,7 @@
 				<attribute name="Main-Class" value="com.affymetrix.main.Main"/>
 				<attribute name="Application-Name" value="IGB" />
 				<attribute name="Permissions" value="all-permissions"/>
+				<attribute name="Trusted-Library" value="true"/>
 <!--				<attribute name="SplashScreen-Image" value="com/affymetrix/igb/igb_splash.gif"/>-->
 			</manifest>
 			<metainf file="LICENSE.html"/>
