Add trusted library attribute to copied library.
git-svn-id: http://svn.code.sf.net/p/genoviz/code/trunk@15684 80d5a9c2-7d8c-4c9f-9369-4e03bca4d2bd

--- a/build.xml
+++ b/build.xml
@@ -159,7 +159,12 @@
 	</target>
 		
 	<target name="bundle-copy" description="copy lib to bundles dir">
-		<copy file="${lib.dir}/${jar_name}.jar" tofile="${bundle.dir}/${jar_name}.jar" filtering="false" />
+		<jar jarfile="${bundle.dir}/${jar_name}.jar" filesetmanifest="merge">
+            <manifest>
+                <attribute name="Trusted-Library" value="true" />
+            </manifest>
+			<zipgroupfileset file="${lib.dir}/${jar_name}.jar" />
+        </jar>
 	</target>
 	
 	<target name="copy-bundles" description="copy bundles to bundle dir" depends="init,extras-init,compiler-def-args">
