Create index in jar.
git-svn-id: http://svn.code.sf.net/p/genoviz/code/trunk@15686 80d5a9c2-7d8c-4c9f-9369-4e03bca4d2bd

--- a/build.xml
+++ b/build.xml
@@ -204,7 +204,7 @@
 
 		<mkdir dir="${dist.dir}/JNLP-INF" />
 		<copy file="${webstart.dir}/igb-5GB.jnlp" tofile="${dist.dir}/JNLP-INF/APPLICATION.JNLP" overwrite="true"/>
-		<jar destfile="${igb.jar.5GB.name}.jar" update="false" filesetmanifest="merge" >
+		<jar destfile="${igb.jar.5GB.name}.jar" update="false" filesetmanifest="merge" index="true">
 			<manifest>
 				<attribute name="Codebase" value="${jnlp.codebase}"/>
 			</manifest>
@@ -213,7 +213,7 @@
 		</jar>
 
 		<copy file="${webstart.dir}/igb-large.jnlp" tofile="${dist.dir}/JNLP-INF/APPLICATION.JNLP" overwrite="true"/>
-		<jar destfile="${igb.jar.large.name}.jar" update="false" filesetmanifest="merge" >
+		<jar destfile="${igb.jar.large.name}.jar" update="false" filesetmanifest="merge" index="true">
 			<manifest>
 				<attribute name="Codebase" value="${jnlp.codebase}"/>
 			</manifest>
@@ -222,7 +222,7 @@
 		</jar>
 
 		<copy file="${webstart.dir}/igb.jnlp" tofile="${dist.dir}/JNLP-INF/APPLICATION.JNLP" overwrite="true"/>
-		<jar destfile="${igb.jar.name}.jar" update="true">
+		<jar destfile="${igb.jar.name}.jar" update="true" index="true">
 			<manifest>
 				<attribute name="Codebase" value="${jnlp.codebase}"/>
 			</manifest>
