--- a/build.xml
+++ b/build.xml
@@ -189,7 +189,19 @@
 		</parallel>
 	</target>
 
-	<target name="webstart" depends="exe" description="Create webstart-compatible IGB jars">
+	<target name="sign">
+		<jar jarfile="${theFile}.tmp" filesetmanifest="merge" index="true">
+            <!-- manifest>
+                <attribute name="Trusted-Library" value="true" />
+            </manifest -->
+			<zipgroupfileset file="${theFile}" />
+        </jar>
+		<delete file="${bundle.dir}/${jar_name}.tmp.bnd.jar" />
+		<my.signjar jar="${theFile}.tmp" signedjar="${theFile}" />
+		<delete file="${theFile}.tmp"/>
+	</target>
+
+	<target name="webstart" depends="jar,bundles_properties" description="Create webstart-compatible IGB jars">
 		<mkdir dir="${webstart.dir}" />
 
 		<delete file="${webstart.dir}/das2server.jar" />
@@ -201,6 +213,14 @@
 		<copy file="${jnlp.basefile.path}" tofile="${webstart.dir}/igb-base.jnlp" filtering="true" overwrite="true" />
 		<copy file="${jnlp.icon.path}" tofile="${webstart.dir}/${jnlp.icon.name}" />
 <!--		<copy file="${jnlp.splashicon.path}" tofile="${webstart.dir}/${jnlp.splashicon.name}" />-->
+
+		<taskdef name="foreach" classname="net.sf.antcontrib.logic.ForEach" classpathref="contrib.path" />
+		<foreach target="sign" parallel="true" inheritall="true" param="theFile">
+			<fileset dir="${bundle.dir}">
+				<include name="**/*.jar"/>
+			</fileset>
+		</foreach>
+		<antcall target="-igb_exe" />
 
 		<mkdir dir="${dist.dir}/JNLP-INF" />
 		<copy file="${webstart.dir}/igb-5GB.jnlp" tofile="${dist.dir}/JNLP-INF/APPLICATION.JNLP" overwrite="true"/>
@@ -461,6 +481,10 @@
 	</target>
 
 	<target name="exe" depends="jar,bundles_properties" description="Create a single-jar IGB application">
+		<antcall target="-igb_exe" />
+	</target>
+	
+	<target name="-igb_exe" description="Create a single-jar IGB application">
 		<jar jarfile="${igb.jar.name}.jar" update="false" index="true">
 			<manifest>
 				<attribute name="Main-Class" value="com.affymetrix.main.Main"/>
