--- a/build.xml
+++ b/build.xml
@@ -212,88 +212,29 @@
 			</fileset>
 		</foreach>
 
+		<igb.executable jarfile="${igb.jar.name}.tmp.jar" index="false" />
 		<mkdir dir="${dist.dir}/JNLP-INF" />
+
 		<copy file="${webstart.dir}/igb.jnlp" tofile="${dist.dir}/JNLP-INF/APPLICATION.JNLP" overwrite="true"/>
-		<jar jarfile="${igb.jar.name}.jar" update="false" index="true">
-			<manifest>
-				<attribute name="Main-Class" value="com.affymetrix.main.Main"/>
-				<attribute name="Application-Name" value="IGB" />
-				<attribute name="Permissions" value="all-permissions"/>
-				<attribute name="Trusted-Library" value="true"/>
-				<attribute name="Codebase" value="${jnlp.codebase}"/>	
-<!--				<attribute name="SplashScreen-Image" value="com/affymetrix/igb/igb_splash.gif"/>-->
-			</manifest>
-			<metainf file="LICENSE.html"/>
-			<metainf file="NOTICES.txt"/>
+		<jar jarfile="${igb.jar.name}.jar" update="false" filesetmanifest="merge" index="true">
 			<fileset dir="${dist.dir}" includes="JNLP-INF/*"/>
-			<zipgroupfileset dir="${dist.dir}">
-				<include name="main.jar"/>
-				<include name="common.jar"/>
-			</zipgroupfileset>
-			<zipgroupfileset file="${osgi.impl}" />
-			<fileset dir="${bundle.dir}">
-				<include name="*.jar"/>
-				<include name="bundles.properties"/>
-			</fileset>
-			<fileset dir="${ext.bundle.dir}">
-				<include name="*.jar"/>
-			</fileset>
+			<zipgroupfileset file="${igb.jar.name}.tmp.jar" />
 		</jar>
 
 		<copy file="${webstart.dir}/igb-large.jnlp" tofile="${dist.dir}/JNLP-INF/APPLICATION.JNLP" overwrite="true"/>
 		<jar jarfile="${igb.jar.large.name}.jar" update="false" filesetmanifest="merge" index="true">
-			<manifest>
-				<attribute name="Main-Class" value="com.affymetrix.main.Main"/>
-				<attribute name="Application-Name" value="IGB" />
-				<attribute name="Permissions" value="all-permissions"/>
-				<attribute name="Trusted-Library" value="true"/>
-				<attribute name="Codebase" value="${jnlp.codebase}"/>	
-<!--				<attribute name="SplashScreen-Image" value="com/affymetrix/igb/igb_splash.gif"/>-->
-			</manifest>
-			<metainf file="LICENSE.html"/>
-			<metainf file="NOTICES.txt"/>
 			<fileset dir="${dist.dir}" includes="JNLP-INF/*"/>
-			<zipgroupfileset dir="${dist.dir}">
-				<include name="main.jar"/>
-				<include name="common.jar"/>
-			</zipgroupfileset>
-			<zipgroupfileset file="${osgi.impl}" />
-			<fileset dir="${bundle.dir}">
-				<include name="*.jar"/>
-				<include name="bundles.properties"/>
-			</fileset>
-			<fileset dir="${ext.bundle.dir}">
-				<include name="*.jar"/>
-			</fileset>
+			<zipgroupfileset file="${igb.jar.name}.tmp.jar" />
 		</jar>
 
 		<copy file="${webstart.dir}/igb-5GB.jnlp" tofile="${dist.dir}/JNLP-INF/APPLICATION.JNLP" overwrite="true"/>
-		<jar jarfile="${igb.jar.5GB.name}.jar" update="false" filesetmanifest="merge" index="true">
-			<manifest>
-				<attribute name="Main-Class" value="com.affymetrix.main.Main"/>
-				<attribute name="Application-Name" value="IGB" />
-				<attribute name="Permissions" value="all-permissions"/>
-				<attribute name="Trusted-Library" value="true"/>
-				<attribute name="Codebase" value="${jnlp.codebase}"/>	
-<!--				<attribute name="SplashScreen-Image" value="com/affymetrix/igb/igb_splash.gif"/>-->
-			</manifest>
-			<metainf file="LICENSE.html"/>
-			<metainf file="NOTICES.txt"/>
+		<jar jarfile="${igb.jar.5GB.name}.jar" update="false" index="true">
 			<fileset dir="${dist.dir}" includes="JNLP-INF/*"/>
-			<zipgroupfileset dir="${dist.dir}">
-				<include name="main.jar"/>
-				<include name="common.jar"/>
-			</zipgroupfileset>
-			<zipgroupfileset file="${osgi.impl}" />
-			<fileset dir="${bundle.dir}">
-				<include name="*.jar"/>
-				<include name="bundles.properties"/>
-			</fileset>
-			<fileset dir="${ext.bundle.dir}">
-				<include name="*.jar"/>
-			</fileset>
+			<zipgroupfileset file="${igb.jar.name}.tmp.jar" />
 		</jar>
+
 		<delete dir="${dist.dir}/JNLP-INF" />
+		<delete file="${igb.jar.name}.tmp.jar" />
 		
 		<my.signjar jar="${basedir}/${igb.jar.name}.jar" signedjar="${webstart.dir}/${igb.jar.name}.jar" />
 		<my.signjar jar="${basedir}/${igb.jar.large.name}.jar" signedjar="${webstart.dir}/${igb.jar.large.name}.jar" />
@@ -526,16 +467,19 @@
 	</target>
 
 	<target name="exe" depends="jar,bundles_properties" description="Create a single-jar IGB application">
-		<igb.executable jarfile="${igb.jar.name}.jar" />
+		<igb.executable jarfile="${igb.jar.name}.jar" index="true"/>
 	</target>
 	
 	<presetdef name="igb.executable">
-		<jar update="false" index="true">
+		<jar update="false">
 			<manifest>
 				<attribute name="Main-Class" value="com.affymetrix.main.Main"/>
 				<attribute name="Application-Name" value="IGB" />
+				<!--Attributes below are useless for local instance. 
+					But they are need for webstart.	-->
 				<attribute name="Permissions" value="all-permissions"/>
 				<attribute name="Trusted-Library" value="true"/>
+				<attribute name="Codebase" value="${jnlp.codebase}"/>
 <!--				<attribute name="SplashScreen-Image" value="com/affymetrix/igb/igb_splash.gif"/>-->
 			</manifest>
 			<metainf file="LICENSE.html"/>
