Update existing jar instead of creating temporary jar.
git-svn-id: http://svn.code.sf.net/p/genoviz/code/trunk@15696 80d5a9c2-7d8c-4c9f-9369-4e03bca4d2bd

--- a/build.xml
+++ b/build.xml
@@ -178,15 +178,12 @@
 	</target>
 
 	<target name="sign">
-		<copy file="${theFile}" tofile="${theFile}.tmp" filtering="false" />
-		<jar jarfile="${theFile}" filesetmanifest="merge" index="true">
+		<jar destfile="${theFile}" update="true" index="true">
             <manifest>
                 <attribute name="Trusted-Library" value="true" />
             </manifest>
-			<zipgroupfileset file="${theFile}.tmp" />
         </jar>
 		<my.signjar jar="${theFile}" signedjar="${theFile}" />
-		<delete file="${theFile}.tmp"/>
 	</target>
 
 	<target name="webstart" depends="jar, bundles_properties" description="Create webstart-compatible IGB jars">
